README's, junit and other changes